[package]
name = "nmm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.18"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
color-eyre = "0.6.5"
tempfile = "3.27.0"
open = "5.3.5"
